--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess a Number</title>
-    <link rel="stylesheet" href="/Tebak-Angka/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -21,6 +21,7 @@
         </div>
       </div>
     </div>
-    <script src="/Tebak-Angka/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
+
